--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dependencies": {
         "pug": "^2.0.3",
         "vue-avatar": "^2.1.3",
+        "vue-resource": "^1.5.0",
         "vue-router": "^3.0.1",
+        "vue-snotify": "^3.0.4",
         "vuex": "^3.0.1"
     }
 }
