--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "pug": "^2.0.3",
         "vue-avatar": "^2.1.3",
+        "vue-multiselect": "^2.1.0",
         "vue-resource": "^1.5.0",
         "vue-router": "^3.0.1",
         "vue-snotify": "^3.0.4",
