--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "array-find-index": "^1.0.2",
+        "array-sort": "^1.0.0",
         "pug": "^2.0.3",
+        "pusher-js": "^4.2.2",
+        "rename-keys": "^2.0.1",
         "vue-avatar": "^2.1.3",
+        "vue-moment": "^3.2.0",
         "vue-multiselect": "^2.1.0",
+        "vue-pusher": "^0.2.1",
         "vue-resource": "^1.5.0",
         "vue-router": "^3.0.1",
         "vue-snotify": "^3.0.4",
+        "vue-truncate-filter": "^1.1.7",
         "vuex": "^3.0.1"
     }
 }
