--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "cross-env": "^5.1",
         "laravel-mix": "^2.0",
+        "laravel-mix-pug": "^0.2.1",
         "vue": "^2.5.7"
     },
     "dependencies": {
